kube/applications/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: applications
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:5.20.2
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /data/downloads
            - name: media
              mountPath: /data/media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: media
          persistentVolumeClaim:
            claimName: media
